--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <version>3.8.1</version>
         </dependency>
 
+        <!--使用thymeleaf的laout功能-->
+        <dependency>
+            <groupId>com.github.zhanhb</groupId>
+            <artifactId>thymeleaf-layout-dialect</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+
         <!--springboot-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -36,6 +43,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
+
 
         <dependency>
             <groupId>com.alibaba</groupId>
