--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
       username: root
-      password: root
+      password: 123
       minimum-idle: 5
       maximum-pool-size: 15
       auto-commit: true
